--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,14 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block header %}
+<header>
+   Menu Test
+</header>
+{% endblock %}
+
+
+{% block footer %}
+<footer>
+
+</footer>
+{% endblock %}
