--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,26 +3,25 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Family App Homepage{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('bundles/family/images/familyicon.ico') }}" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{{ asset('css/materialize.min.css') }}" media="screen,projection">
-        <link type="text/css" rel="stylesheet" href="{{ asset('css/main.css') }}">
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
+
     </head>
     <body>
         {% block header %}{% endblock %}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
         {% block footer %}{% endblock %}
         <!-- Import jQuery before materialize.js -->
-        <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
         <!-- Compiled and minified JavaScript offline Materialize -->
-        <script src="{{ asset('js/materialize.min.js') }}"></script>
+        <script src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
     </body>
 </html>
