--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,5 +23,6 @@
 
         <!-- Compiled and minified JavaScript offline Materialize -->
         <script src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
+        <script> $(".button-collapse").sideNav();</script>
     </body>
 </html>
