--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,14 +11,16 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
+
 
     </head>
     <body>
         {% block header %}{% endblock %}
         {% block body %}{% endblock %}
         {% block footer %}{% endblock %}
-        <!-- Import jQuery before materialize.js -->
+        <!-- jQuery is required by Materialize to function -->
         <script src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
         <!-- Compiled and minified JavaScript offline Materialize -->
