--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,9 @@
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
+
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
 
