--- a/src/FamilyBundle/Resources/views/Default/phone.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/phone.html.twig
@@ -1,1 +1,19 @@
 {%extends 'base.html.twig'%}
+
+{% block stylesheet%}
+
+{% endblock %}
+{% block header %}
+
+
+{% endblock %}
+
+{% block body %}
+
+    test 1 phone
+{% endblock %}
+
+{% block footer %}
+
+
+{% endblock %}
