--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,16 +6,16 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('bundles/family/images/familyicon.ico') }}" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+        {% block stylesheet%}
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">
+        {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">#}
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
-
+        {% endblock %}
 
     </head>
     <body>
