--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -2,59 +2,63 @@
 
 {% block header %}
 <header>
-    <div class="container">
-        <nav class="light-blue lighten-1" role="navigation">
+
+        <nav role="navigation">
             <div class="nav-wrapper container"><a href="#"><img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}"></a>
                 <ul class="right hide-on-med-and-down">
-                    {#<li><a href="{{ path('') }}">Phone</a></li>#}
-                    {#<li><a href="{{ path('') }}">Calendar</a></li>#}
-                    {#<li><a href="{{ path('') }}">Timer</a></li>#}
-                    {#<li><a href="{{ path('') }}">Map</a></li>#}
+                    <li><a href="{{ path('family_phone') }}">Phone</a></li>
+                    <li><a href="{{ path('family_calendar') }}">Calendar</a></li>
+                    <li><a href="{{ path('family_time') }}">Timer</a></li>
+                    <li><a href="{{ path('family_map') }}">Map</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#">Phone</a></li><br>
-                    <li><a href="#">Calendar</a></li><br>
-                    <li><a href="#">Timer</a></li><br>
-                    <li><a href="#">Map</a></li><br>
+                    <li><a href="{{ path('family_phone') }}">Phone</a></li><br>
+                    <li><a href="{{ path('family_calendar') }}">Calendar</a></li><br>
+                    <li><a href="{{ path('family_time') }}">Timer</a></li><br>
+                    <li><a href="{{ path('family_map') }}">Map</a></li><br>
                 </ul>
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
         </nav>
-    </div>
+
 </header>
 {% endblock %}
 
 
 {% block body %}
-    <div>
-        <a href="https://panels.scotch.io/" class="profile-spot no-border bottom">
-            <span class="img" style="background-image: url(&#39;/img/spot-panels.png&#39;);"></span>
-            <span class="text">Panels</span>
-        </a>
-    </div>
+
     <div class="loader" loader="" style="display: none;"></div>
-    {#<div class="join_view ng-scope">#}
+    <div class="join_view ng-scope">
     <h3 class="center-align">Family App Body</h3>
     <div class="container center-align"><br><br>
         <div class="row">
-            <a href=""><img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt=""></a>
-            <a href=""><img src="{{ asset('bundles/family/images/calendar.png') }}" class="imgmenu" alt=""></a><br>
-            <a href=""><img src="{{ asset('bundles/family/images/time.png') }}" class="imgmenu" alt=""></a>
-            <a href=""><img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt=""></a><br>
+
+            <a href="{{ path('family_phone') }}"><img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone"></a>
+
+            <a href="{{ path('family_calendar') }}"><img src="{{ asset('bundles/family/images/calendar.png') }}" class="imgmenu" alt="calendar"></a><br>
+
+            <a href="{{ path('family_time') }}"><img src="{{ asset('bundles/family/images/time.png') }}" class="imgmenu" alt="time"></a>
+
+            <a href="{{ path('family_map') }}"><img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt="map"></a><br>
         </div>
-    </div></div>
+    </div><br><br>
 {% endblock %}
 
 {% block footer %}
-{#<div class="container">#}
-    <div class="light-blue lighten-1">
+<div class="container">
+    {#<div class="light-blue lighten-1">#}
         <div class="container center-align">
             © 2016 Copyright all rights reserved - design by
             <a href="{{ asset('http://www.wildcodeschool.fr') }}" class="purple-text text-darken-4">
             <span id="wild">&nbsp; Wild Code School.</span></a>
             <a href="" class="purple-text text-darken-4"><span id="">&nbsp; Mention Légales.</span></a>
         </div>
+    </div>
+    <div>
+        <a href="https://panels.scotch.io/" class="profile-spot no-border bottom">
+            <span class="img" style="background-image: url({{ asset('bundles/family/images/phone.png') }});"></span>
+        </a>
     </div>
 </div>
 {% endblock %}
