--- a/src/FamilyBundle/Resources/views/Default/layout.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/layout.html.twig
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Login Homepage{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="{{ asset('bundles/family/images/familyicon.ico') }}" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
-
-</head>
+    <head>
+        <meta charset="UTF-8" />
+    </head>
     <body>
-    {% block header %}<h1>Test</h1>{% endblock %}
+    <h1>Test logg inside</h1>
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -39,6 +28,7 @@
 
         <div>
             {% block fos_user_content %}
+
             {% endblock fos_user_content %}
         </div>
     </body>
