--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -1,40 +1,74 @@
 /*----- INDEX  ------
 //
-// 1. IMAGE
-// 2.
-// 3.
-// 4.
+// 1. A Link
+// 2. Images
+// 3. Nav
+// 4. Responsive
 ---------------------*/
 
-/************************************
-*                                   *
-*            1. IMAGE               *
-*                                   *
-************************************/
-
 /*body {*/
-    /*display: flex;*/
-    /*min-height: 100vh;*/
-    /*flex-direction: column;*/
+/*display: flex;*/
+/*min-height: 100vh;*/
+/*flex-direction: column;*/
 /*}*/
 
 /*main {*/
-    /*flex: 10 auto;*/
+/*flex: 10 auto;*/
 /*}*/
+
+/************************************
+*                                   *
+*            1. A link              *
+*                                   *
+************************************/
+
+
+
+/* unvisited link */
+a:link {
+    color: blue !important;
+    /*background-color: red;*/
+    /*padding: 14px 25px;*/
+    /*text-align: center;*/
+    /*text-decoration: none;*/
+    /*display: inline-block;*/
+}
+
+/* visited link */
+a:visited {
+    color: green !important;
+}
+
+/* mouse over link */
+a:hover {
+    color: red !important;
+}
+
+/* selected link */
+a:active {
+    color: purple !important;
+}
+
+
+/************************************
+*                                   *
+*            2. IMAGE               *
+*                                   *
+************************************/
 
 .imgmenu
 {
     width: 100px;
     height: 100px;
 }
-.imgwall
-{
-    background: url("../images/userl.png") no-repeat center fixed;
-}
 
-nav{
-    /*background-color: orange !important;*/
-}
+
+/************************************
+*                                   *
+*            3. NAV                 *
+*                                   *
+************************************/
+
 .nav_bar_logo, .nav_bar_burger{
     height: 100%;
 }
@@ -42,11 +76,11 @@ nav{
     height:100%;
 }
 
-
-.brand-logo {
- color:white !important;
-}
-
+/************************************
+*                                   *
+*            4. Responsive          *
+*                                   *
+************************************/
 
 /* Vue responsive */
 @media screen and (max-width: 992px) {
@@ -61,10 +95,5 @@ nav{
     .titre_reponsive{
         display: initial !important;
     }
-    /*nav{*/
-        /*background-color: purple !important;*/
-    /*}*/
-    /*nav a{*/
-        /*color: white !important;*/
-    /*}*/
-/*}*/
+
+}
