--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,9 +19,51 @@
 
     </head>
     <body>
-        {% block header %}{% endblock %}
+        {% block header %}
+            <header>
+
+                <nav class="white" role="navigation">
+                    <div class="nav-wrapper container"><a href="{{ path('family_homepage') }}"><img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo"></a>
+                        <ul class="right hide-on-med-and-down">
+                            <li><a href="{{ path('family_phone') }}">Phone</a></li>
+                            <li><a href="{{ path('family_calendar') }}">Calendar</a></li>
+                            <li><a href="{{ path('family_time') }}">Timer</a></li>
+                            <li><a href="{{ path('family_map') }}">Map</a></li>
+                        </ul>
+
+                        <ul id="nav-mobile" class="side-nav">
+                            <li><a href="{{ path('family_phone') }}">Phone</a></li><br>
+                            <li><a href="{{ path('family_calendar') }}">Calendar</a></li><br>
+                            <li><a href="{{ path('family_time') }}">Timer</a></li><br>
+                            <li><a href="{{ path('family_map') }}">Map</a></li><br>
+                        </ul>
+                        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+                    </div>
+                </nav>
+
+            </header>
+        {% endblock %}
         {% block body %}{% endblock %}
-        {% block footer %}{% endblock %}
+        {% block footer %}
+            <footer>
+
+
+                <div class="container center-align purple-text text-darken-4">
+                    © 2016 Copyright all rights reserved - design by
+                    <a href="{{ asset('http://www.wildcodeschool.fr') }}" class="purple-text text-darken-4">
+                        <span id="wild">&nbsp; Wild Code School.</span></a>
+                    <a href="{{ path('family_mention') }}" class="purple-text text-darken-4"><span id="">&nbsp; Mention Légales.</span></a>
+                </div>
+
+            {#<div>#}
+            {#<a href="https://panels.scotch.io/" class="profile-spot no-border bottom">#}
+            {#<span class="img" style="background-image: url({{ asset('bundles/family/images/phone.png') }});"></span>#}
+            {#</a>#}
+            {#</div>#}
+
+            </footer>
+        {% endblock %}
+
         <!-- jQuery is required by Materialize to function -->
         <script src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
