--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -16,6 +16,18 @@
 /*flex: 10 auto;*/
 /*}*/
 
+footer{
+    font-size: 18px !important;
+    font-family: Verdana, Geneva, sans-serif;
+    color: #333;
+    background-color: ;
+    height: 20px;
+    line-height: 20px;
+    vertical-align: middle;
+    width: 100%;
+    position:absolute;
+    bottom:0px;
+}
 /************************************
 *                                   *
 *            1. A link              *
