--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -18,5 +18,17 @@
             <a href="{{ path('family_map') }}"><img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt="map"></a><br>
         </div>
     </div>
-{% endblock %}
 
+
+        <div id="f1_container">
+            <div id="f1_card" class="shadow">
+                <div class="front face">
+                    <a href="{{ path('family_phone') }}"><img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone"></a>
+                </div>
+                <div class="back face center">
+                    <p>This is nice for exposing more information about an image.</p>
+                    <p>Any content can go here.</p>
+                </div>
+            </div>
+        </div>
+{% endblock %}
