--- a/src/FamilyBundle/Resources/views/Security/login.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login.html.twig
@@ -1,6 +1,9 @@
-{% extends "FamilyBundle::layout.html.twig" %}
+{% extends "base.html.twig" %}
 
+{% block body %}
+    <div class="container">
 {% block fos_user_content %}
-    {{ include('FamilyBundle:Security:login_content.html.twig') }}
-
+    {{ include('FOSUserBundle:Security:login_content.html.twig') }}
+    </div>
 {% endblock fos_user_content %}
+{% endblock %}
