--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'FamilyBundle' %}
+{% trans_default_domain 'FOSUserBundle' %}
 
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -20,3 +20,4 @@
 
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
+<a href="{{ path('fos_user_registration_register') }}">Register</a>
