--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,15 @@
 {%extends 'base.html.twig'%}
 
+{% block stylesheet%}
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
+
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
+{% endblock %}
+
 
 {% block body %}
-
+{% include "@Family/Default/nav.html.twig"  %}
     <div class="loader" loader="" style="display: none;"></div>
     <div class="join_view ng-scope"><br>
     <h3 class="center-align">Family App Body</h3>
@@ -31,4 +38,6 @@
                 </div>
             </div>
         </div>
+        {% include "@Family/Default/footer.html.twig"  %}
 {% endblock %}
+
