--- a/src/FamilyBundle/Resources/views/Registration/register.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register.html.twig
@@ -1,8 +1,14 @@
 {% extends "base.html.twig" %}
 {% block body %}
     <div class="container">
+        <div class="wall">
 {% block fos_user_content %}
 {% include "FOSUserBundle:Registration:register_content.html.twig" %}
 {% endblock fos_user_content %}
-    </div>
+    </div></div>
+{% endblock %}
+
+{% block stylesheet %}
+{{ parent() }}
+<link rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
 {% endblock %}
