--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,5 +29,6 @@
         <!-- Compiled and minified JavaScript offline Materialize -->
         <script src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
         <script> $(".button-collapse").sideNav();</script>
+        <script src="{{ asset('bundles/family/js/main.js') }}"></script>
     </body>
 </html>
