--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -1,8 +1,18 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+<div class="center">
+{{ form_label(form.nom) }}
+{{ form_errors(form.nom) }}
+{{ form_widget(form.nom) }}
+</div>
+{{ form_label(form.anniversaire) }}
+{{ form_errors(form.anniversaire) }}
+{{ form_widget(form.anniversaire) }}
+
+{{ form_widget(form) }}
+<div>
+        <input class="waves-effect waves-light btn" type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
+
