--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -5,33 +5,34 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-<div class="container">
-    <div class="row"><br><br>
+<div class="container center-align">
+    <div class="row "><br>
+        <img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo">
         <a href="{{ path('fos_user_registration_register') }}"><h5>1- Enregistrez vous en cliquant ici :</h5></a><br><br>
         <h5>2- Connectez vous :</h5> <br><br>
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
+<form class="form " action="{{ path("fos_user_security_check") }}" method="post">
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
 
     <div class="row">
-            <div class="row">
-                <div class="input-field col s6">
+
+                <div class="input-field col s12 ">
                     <i class="material-icons prefix">account_circle</i>
                     <label for="username">{{ 'security.login.username'|trans }}</label>
                     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
                 </div>
-            </div>
+
     </div>
     <div class="row">
-        <div class="row">
-            <div class="input-field col s6">
+
+            <div class="input-field col s12">
                 <i class="material-icons prefix">lock</i>
                 <label for="password">{{ 'security.login.password'|trans }}</label>
                 <input type="password" id="password" name="_password" required="required" />
             </div>
-        </div>
+
     </div>
     <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked"  />
     <label for="filled-in-box">{{ 'security.login.remember_me'|trans }}</label>
