--- a/src/FamilyBundle/Resources/views/Default/nav.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/nav.html.twig
@@ -4,10 +4,12 @@
         <nav class="white" role="navigation">
             <div class="nav-wrapper container"><a href="{{ path('family_homepage') }}"><img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo"></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ path('family_phone') }}">Phone</a></li>
-                    <li><a href="{{ path('family_calendar') }}">Calendar</a></li>
-                    <li><a href="{{ path('family_time') }}">Timer</a></li>
-                    <li><a href="{{ path('family_map') }}">Map</a></li>
+                    <li><a href="{{ path('family_phone') }}" class="waves-effect waves-light btn">Phone</a></li>
+                    <li><a href="{{ path('family_calendar') }}" class="btn">Calendar</a></li>
+                    <li><a href="{{ path('family_time') }}" class="btn">Timer</a></li>
+                    <li><a href="{{ path('family_map') }}" class="btn">Map</a></li>
+                    <li><a href="" class="btn">Profile</a></li>
+                    <li><a href="" class="btn">Deconnection</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="side-nav">
@@ -15,6 +17,9 @@
                     <li><a href="{{ path('family_calendar') }}">Calendar</a></li><br>
                     <li><a href="{{ path('family_time') }}">Timer</a></li><br>
                     <li><a href="{{ path('family_map') }}">Map</a></li><br>
+                    <li><a href="">Profile</a></li><br>
+                    <li><a href="">Deconnection</a></li><br>
+                    <li><a href="">Homepage</a></li><br>
                 </ul>
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
