--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -16,26 +16,28 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
 
-    <div class="row">
+    <div class="row col S6">
 
-                <div class="input-field col s12 ">
+                <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <label for="username">{{ 'security.login.username'|trans }}</label>
                     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
                 </div>
 
     </div>
-    <div class="row">
+    <div class="row col s6">
 
-            <div class="input-field col s12">
+            <div class="input-field">
                 <i class="material-icons prefix">lock</i>
                 <label for="password">{{ 'security.login.password'|trans }}</label>
                 <input type="password" id="password" name="_password" required="required" />
             </div>
 
     </div>
+
     <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked"  />
     <label for="filled-in-box">{{ 'security.login.remember_me'|trans }}</label>
+
 
     <input class="waves-effect waves-light btn" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 
