--- a/src/FamilyBundle/Resources/views/Default/nav.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/nav.html.twig
@@ -9,7 +9,7 @@
                     <li><a href="{{ path('family_time') }}" class="btn">Timer</a></li>
                     <li><a href="{{ path('family_map') }}" class="btn">Map</a></li>
                     <li><a href="" class="btn">Profile</a></li>
-                    <li><a href="" class="btn">Deconnection</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}" class="btn">Deconnection</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="side-nav">
