--- a/src/FamilyBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/confirmed.html.twig
@@ -9,5 +9,5 @@
     {% endif %}
 
 {% endblock fos_user_content %}
-    <a href="{{ path ('family_homepage') }}">Pour aller à la homepage</a>
+    <a href="{{ path ('family_homepage') }}">Vous pouvez  aller à la homepage maintenant.</a>
 {% endblock %}
