--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,9 @@
 
         <!-- Compiled and minified JavaScript offline Materialize -->
         <script src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
+        {#<script src="{{ asset('bundles/family/js/main.js') }}"></script>#}
         <script> $(".button-collapse").sideNav();</script>
-        <script src="{{ asset('bundles/family/js/main.js') }}"></script>
+
+
     </body>
 </html>
