--- a/src/FamilyBundle/Resources/views/Default/calendar.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/calendar.html.twig
@@ -1,7 +1,15 @@
 {%extends 'base.html.twig'%}
+{% block stylesheet%}
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
+
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
+{% endblock %}
 
 
 {% block body %}
+    {% include "@Family/Default/nav.html.twig"  %}
 
     test 2 calendar
+    {% include "@Family/Default/footer.html.twig"  %}
 {% endblock %}
