--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -34,7 +34,26 @@
                 </div>
             </div>
         </div>
+    <div class="container center-align col s2 m2 l2">
+
+            <div class="card-panel ">
+
+                <img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone">
+                <span class="card-title">Phone</span>
+
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                </div>
+            </div>
+
+    </div>
+
 </div>
+
 
         {#<div id="f1_container">#}
             {#<div id="f1_card" class="shadow">#}
