--- a/src/FamilyBundle/Resources/views/Default/time.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/time.html.twig
@@ -1,9 +1,16 @@
 {%extends 'base.html.twig'%}
+{% block stylesheet%}
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
+{% endblock %}
 
 
 {% block body %}
+    {% include "@Family/Default/nav.html.twig"  %}
 
     test 3
+    {% include "@Family/Default/footer.html.twig"  %}
 {% endblock %}
 
